make docker containers restart on server boot by restarting them unless they've been explicitly stopped

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - /var/lib/vmcp-tei:/var/lib/vmcp-tei # the TEI corpus
     depends_on:
       - solr
+    restart: unless-stopped
 
   solr:
     image: solr
@@ -28,3 +29,4 @@ services:
       - "mkdir /var/solr/data; precreate-core vmcp; precreate-core vmcp-editorial; exec solr -f"
     ports:
       - "8983:8983"
+    restart: unless-stopped
